RESOLVED FIXED31448
Menu button shows wrong content in Chromium
https://bugs.webkit.org/show_bug.cgi?id=31448
Summary Menu button shows wrong content in Chromium
Evan Stade
Reported 2009-11-12 16:45:37 PST
behavior on IE8: if a node (such as a link) has focus, the menu button shows a context menu in the top left of the screen. The contents of the menu are relevant to the focused node. behavior on firefox 3 win and linux: if a node (such as a link) has focus, the menu button shows a context menu at the node's location. The contents of the menu are relevant to the focused node. behavior on chrome windows and linux: if a node (such as a link) has focus, the menu button shows a context menu in the top left of the screen. The contents of the menu are relevant to whatever node is at the top left of the screen. (Note that if a text area has focus, the context menu will be relevant to the text---this patch doesn't change that behavior.) behavior on chrome with this patch: matches firefox p.s. there needs to be a WebKit Chromium component option in this bug tracker
Attachments
patch (2.46 KB, patch)
2009-11-12 16:47 PST, Evan Stade
fishd: review-
same, minus lint error (2.45 KB, patch)
2009-11-16 13:02 PST, Evan Stade
no flags
Evan Stade
Comment 1 2009-11-12 16:47:19 PST
Adam Barth
Comment 2 2009-11-14 22:49:29 PST
Checking style for patch 43116 from bug 31448. Running check-webkit-style WebKit/chromium/src/WebViewImpl.cpp:605: One line control clauses should not use braces. [whitespace/braces] [4] Done processing WebKit/chromium/src/WebViewImpl.cpp Total errors found: 1
Evan Stade
Comment 3 2009-11-16 10:25:32 PST
I think that linter error is a false positive. The style guide doesn't really say but I assume that if one part of a block of if-elses uses curlies then they all should.
Darin Fisher (:fishd, Google)
Comment 4 2009-11-16 10:28:57 PST
Comment on attachment 43116 [details] patch > Index: WebKit/chromium/src/WebViewImpl.cpp > + } else if (focusedNode) { > + location = focusedNode->getRect().bottomLeft(); > + } else { nit: no brackets around single line statements. otherwise, LGTM
Evan Stade
Comment 5 2009-11-16 13:02:30 PST
Created attachment 43320 [details] same, minus lint error
WebKit Commit Bot
Comment 6 2009-11-18 15:11:07 PST
Comment on attachment 43320 [details] same, minus lint error Clearing flags on attachment: 43320 Committed r51142: <http://trac.webkit.org/changeset/51142>
WebKit Commit Bot
Comment 7 2009-11-18 15:11:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.