2009-11-18  Evan Stade  <estade@chromium.org>

Reviewed by Darin Fisher.

        Menu button shows wrong content in Chromium
        https://bugs.webkit.org/show_bug.cgi?id=31448

        Make context menu button (VK_APPS) show context menu for node that has
        keyboard focus. This affects both the content and the positioning.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::sendContextMenuEvent):

git-svn-id: svn://svn.chromium.org/blink/trunk@51142 bbb929c8-8fbe-4397-9dbb-9b2b20218538